[project]
name = "celeste-reranking"
version = "0.1.0"
description = "Unified reranking interface for multiple providers"
requires-python = ">=3.13"
dependencies = [
    "celeste-core>=0.1.0",
    "cohere>=5.10.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "notebook>=7.4.4",
]

[tool.uv.sources]
celeste-core = { git = "https://github.com/celeste-kai/celeste-core.git" }